--- a/pom.xml
+++ b/pom.xml
@@ -148,14 +148,20 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.31</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-multipart</artifactId>
+			<version>2.31</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-core</artifactId>
 		    <version>2.11.0</version>
 		</dependency>
-				
+
 		<dependency>
 		    <groupId>com.sun.xml.bind</groupId>
 		    <artifactId>jaxb-core</artifactId>
@@ -221,6 +227,12 @@
 		    <groupId>com.strandls.biodiv</groupId>
 		    <artifactId>taxonomy-client</artifactId>
 		    <version>1.0.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.strandls.biodiv</groupId>
+			<artifactId>esmodule-client</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 		
 		<dependency>
